# md-formatter

./: .gitignore  Cargo.toml  PLAN.md  README.md  STATUS.md  index.d.ts  index.js  package.json  test.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: package.json
scripts/: bump-version.mjs
src/: cli.rs  formatter.rs  lib.rs  main.rs  napi.rs  parser.rs
tests/fixtures/: complex-bad.md  complex-good.md  simple-bad.md  simple-good.md
