[package]
name = "md-formatter"
version = "0.3.1"
edition = "2021"
description = "A fast, opinionated Markdown formatter"
license = "MIT"
repository = "https://github.com/rewdy/md-formatter"
homepage = "https://github.com/rewdy/md-formatter"
documentation = "https://docs.rs/md-formatter"
readme = "README.md"
keywords = ["markdown", "formatter", "cli", "pulldown-cmark"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
authors = ["Andrew Meyer"]
exclude = [
    ".github/",
    "npm/",
    "*.node",
    "pnpm-lock.yaml",
    "package.json",
    "tsconfig.json",
    "__test__/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mdfmt"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:glob"]
napi = ["dep:napi", "dep:napi-derive", "dep:glob"]

[dependencies]
pulldown-cmark = "0.9"
clap = { version = "4.4", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
anyhow = "1.0"
napi = { version = "2", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
insta = "1.34"

[build-dependencies]
napi-build = "2.1"

[profile.release]
opt-level = 3
lto = true
